--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -1,5 +1,15 @@
 set(BINARY ${CMAKE_PROJECT_NAME}_tst)
 
+# External dependencies (linked with FetchContent)
+include(FetchContent)
+
+FetchContent_Declare(
+    googletest
+    GIT_REPOSITORY https://github.com/google/googletest.git
+    GIT_TAG        master
+  )
+FetchContent_MakeAvailable(googletest)
+
 file(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES false *.h *.cpp)
 set(SOURCES ${TEST_SOURCES})
 add_executable(${BINARY} ${TEST_SOURCES})
