Add an option to add/remove frame pointers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,20 @@ set(CMAKE_CXX_STANDARD 11)
 
 add_compile_definitions("TNG_DATA_PATH=\"${CMAKE_CURRENT_SOURCE_DIR}/data/\"")
 
+## Frame pointers
+set(FRAME_PTR_FLAG_YES "-fno-omit-frame-pointer")
+## Frame pointers removal
+set(FRAME_PTR_FLAG_NO "-fomit-frame-pointer")
+
+option(ADD_FRAME_PTR "Enable tests" ON)
+if (${ADD_FRAME_PTR})
+  message(STATUS "adding in frame pointers")
+  list(APPEND CMAKE_CXX_FLAGS ${FRAME_PTR_FLAG_YES})
+else()
+  message(STATUS "removing frame pointers")
+  list(APPEND CMAKE_CXX_FLAGS ${FRAME_PTR_FLAG_NO})
+endif()
+
 add_compile_options(-Werror=sign-compare)
 add_compile_options(-fPIC)
 
